new-relic-fluent-plugin.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: newrelic-logging
  namespace: default
  labels:
    k8s-app: newrelic-logging
    version: v1
    kubernetes.io/cluster-service: "true"
    name: newrelic-logging
    app.kubernetes.io/name: newrelic-logging
spec:
  selector:
    matchLabels:
      name: newrelic-logging
  template:
    metadata:
      labels:
        k8s-app: newrelic-logging
        version: v1
        kubernetes.io/cluster-service: "true"
        name: newrelic-logging
        app.kubernetes.io/name: newrelic-logging
    spec:
      serviceAccountName: newrelic-logging
      containers:
      - name: newrelic-logging
        image: newrelic/newrelic-fluentbit-output:1.1.2
        command:
          - /fluent-bit/bin/fluent-bit
          - -c
          - /fluent-bit/etc/fluent-bit.conf
          - -e
          - /fluent-bit/bin/out_newrelic.so
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
        - name: config
          mountPath: /fluent-bit/etc
        - name: varlog
          mountPath: /var
      terminationGracePeriodSeconds: 10
      volumes:
      - name: config
        configMap:
          name: fluent-bit-config
      - name: varlog
        hostPath:
          path: /var
