full_nr-lab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test
  labels:
    app: app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-test
  template:
    metadata:
      labels:
        app: app-test
    spec:
      containers:
      - name: browser
        image: nrcandidatelab/nrcl_selenium_browser:latest
        ports:
        - containerPort: 4444
      - name: traffic
        image: jmbrinkman/nrcl_traffic_new:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app
          name: script
      volumes:
      - name: script
        hostPath:
          path: /2/new_relic/script
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: mysql
        image: nrcandidatelab/nrcl_mysql:latest
        ports:
        - containerPort: 3306
          hostPort: 3306
        volumeMounts:
        - mountPath: /var/lib/sql
          name: mysqldata
      - name: storefront
        image: tomcat
        ports:
        - containerPort: 8080
          hostPort: 8080
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps
          name: war-target
        - mountPath: /usr/local/tomcat/opt/nr-agent
          name: nr-target
      volumes:
      - name: war-source
        hostPath:
          path: /2/new_relic/war_source
      - name: nr-source
        hostPath:
          path: /2/new_relic/nr_source
      - name: war-target
        emptyDir: {}
      - name: nr-target
        emptyDir: {}
      - name: mysqldata
        hostPath:
          path: /2/new_relic/mysqldata

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  ports:
  - name: tomcat
    nodePort: 32380
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: mysql
    nodePort: 32381
    port: 3306
    protocol: TCP
    targetPort: 3306
  - name: jmx
    nodePort: 32382
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  name: app-test
  namespace: default
spec:
  ports:
  - name: selenium
    nodePort: 32383
    port: 4444
    protocol: TCP
    targetPort: 4444
  - name: traffic
    nodePort: 32384
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app-test
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
